@@ -1,7 +1,7 @@
 """
 Gentoo Linux Installer
 
-$Id: GLIArchitectureTemplate.py,v 1.103 2005/04/29 16:27:19 agaffney Exp $
+$Id: GLIArchitectureTemplate.py,v 1.104 2005/04/29 16:35:37 agaffney Exp $
 Copyright 2004 Gentoo Technologies Inc.
 
 The ArchitectureTemplate is largely meant to be an abstract class and an 
@@ -97,6 +97,12 @@ class ArchitectureTemplate:
 		self._logger.log("Added "+script_name+" to runlevel "+runlevel)
 
 	##
+	# Private Function.  Will return a list of packages to be emerged for a given command.  Not yet used.
+	# @param cmd full command to run ('/usr/portage/scripts/bootstrap.sh --pretend' or 'emerge -p system')
+	def _get_packages_to_emerge(self, cmd):
+		return GLIUtility.spawn(cmd + r" | grep -e '\[ebuild' | sed -e 's:\[ebuild .\+ \] ::' -e 's: \[.\+\] ::' -e 's: +$::'", chroot=self._chroot_dir, return_output=True)[1].split("\n")
+
+	##
 	# Private function.  For binary installs it will attempt to quickpkg packages that are on the livecd.
 	# @param package package to be quickpkg'd.
 	def _quickpkg_deps(self, package):
@@ -108,19 +114,13 @@ class ArchitectureTemplate:
 		if "PORTAGE_TMPDIR" in make_conf and make_conf['PORTAGE_TMPDIR']: PORTAGE_TMPDIR = make_conf['PORTAGE_TMPDIR']
 		GLIUtility.spawn("mkdir -p " + self._chroot_dir + PKGDIR, logfile=self._compile_logfile, append_log=True)
 		GLIUtility.spawn("mkdir -p " + self._chroot_dir + PORTAGE_TMPDIR, logfile=self._compile_logfile, append_log=True)
-		packages = GLIUtility.spawn("emerge -p " + package + r" | grep -e '\[ebuild' | sed -e 's:\[ebuild .\+ \] ::' -e 's: \[.\+\] ::' -e 's: +$::'", chroot=self._chroot_dir, return_output=True)[1].split("\n")
+		packages = self._get_packages_to_emerge("emerge -p " + package)
 		for pkg in packages:
 			if not GLIUtility.is_file(self._chroot_dir + PKGDIR + "/All/" + pkg.split('/')[1] + ".tbz2"):
 				ret = GLIUtility.spawn("env PKGDIR='" + self._chroot_dir + PKGDIR + "' PORTAGE_TMPDIR='" + self._chroot_dir + PORTAGE_TMPDIR + "' quickpkg =" + pkg)
 				if ret:
 					# This package couldn't be quickpkg'd. This may be an error in the future
 					pass
-
-	##
-	# Private Function.  Will return a list of packages to be emerged for a given command.  Not yet used.
-	# @param cmd full command to run ('/usr/portage/scripts/bootstrap.sh --pretend' or 'emerge -p system')
-	def _get_packages_to_emerge(self, cmd):
-		return GLIUtility.spawn(cmd + r" | grep -e '\[ebuild' | sed -e 's:\[ebuild .\+ \] ::' -e 's: \[.\+\] ::' -e 's: +$::'", chroot=self._chroot_dir, return_output=True)[1].split("\n")
 
 	##
 	# Private Function.  Will emerge a given package in the chroot environment.
