@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.158 2005/04/29 16:27:19 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.159 2005/04/29 16:35:37 agaffney Exp $
 
 *GLI-0.1_alpha (4 Apr 2005)
 
@@ -12,7 +12,8 @@
   GLIStorageDevice (pointed out by chotchki). Fixed missing int()s. Split
   'custom' sync option into 'none' and 'snapshot'. Minor fixes to
   GLIStorageDevice as suggested by pychecker. Fix minor bug in
-  _get_packages_to_emerge(). Fix _quickpkg_deps()
+  _get_packages_to_emerge(). Fix _quickpkg_deps() to call
+  _get_packages_to_emerge()
 
   28 Apr 2005; Preston Cody <codeman@gentoo.org>
   Added group-adding code to set_users in ArchTemplate
